--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "@cycle/core": "^3.1.0",
-    "@cycle/dom": "^5.3.0"
+    "@cycle/dom": "^5.3.0",
+    "key-string": "0.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
